tyring to fix the display grid and list and added some othe changes over the code structur and then changed some varaibels to make the code more readable

--- a/src/output.css
+++ b/src/output.css
@@ -725,6 +725,11 @@ video {
   margin-right: auto;
 }
 
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .my-\[1em\] {
   margin-top: 1em;
   margin-bottom: 1em;
@@ -881,8 +886,8 @@ video {
   height: 350px;
 }
 
-.h-\[45vh\] {
-  height: 45vh;
+.h-\[65vh\] {
+  height: 65vh;
 }
 
 .h-\[7vh\] {
